--- a/force-app/main/default/classes/CustomUnitOfWork_Test.cls
+++ b/force-app/main/default/classes/CustomUnitOfWork_Test.cls
@@ -45,4 +45,25 @@ public with sharing class CustomUnitOfWork_Test {
         Account updatedAccount = [SELECT Name FROM Account LIMIT 1];
         Assert.areEqual('Changed Account Name', updatedAccount.Name, 'It should update the account record');
     }
+
+    @isTest
+    static void it_should_register_relationship(){
+        // Given
+        Account acc = new Account(Name = 'Test Account');
+        Contact con = new Contact(FirstName = 'Test', LastName = 'Contact');
+        CustomUnitOfWork uow = new CustomUnitOfWork(new List<SObjectType>{Account.SObjectType, Contact.SObjectType});
+        uow.registerNew(acc);
+        uow.registerNew(con);
+        uow.registerRelationship(con, Contact.AccountId, acc);
+        // When
+        Test.startTest();
+            uow.commitWork();
+        Test.stopTest();
+        // Then
+        Contact updatedContact = [SELECT FirstName, LastName, AccountId
+                                  FROM Contact
+                                  LIMIT 1];
+        Assert.isTrue(updatedContact.AccountId == acc.Id, 'It should register the relationship');
+    }
+
 }
